Added a connectionstring to support the SQL name on my local machine, because it is not .\SQLEXPESS
Added connection strings to web.config and app.configs of the webAPI as well as the Unit Tests.

Updated the code in the unit tests,.

--- a/ChilindoBankLtd.Data/App.config
+++ b/ChilindoBankLtd.Data/App.config
@@ -10,4 +10,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="ChilindoBankLtd_SQL" connectionString="  Data Source=.\SQLDEV;Integrated Security=True; Initial Catalog=ChilindoBankLtd_SQL; Connect Timeout=15;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"  providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
