--- a/ChilindoBankLtd.Tests/App.config
+++ b/ChilindoBankLtd.Tests/App.config
@@ -8,8 +8,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="ChilindoBankLtd_SQL" connectionString="Data Source=.\SQLDEV; Integrated Security=True; Initial Catalog=ChilindoBankLtd_SQL; Connect Timeout=15; Encrypt=False; TrustServerCertificate=True; ApplicationIntent=ReadWrite; MultiSubnetFailover=False"  providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings></appSettings>
-  <connectionStrings></connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
